--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     <header>
         <nav class="container">
             <h1>DSMovie</h1>
-            <a href="https://github.com/devsuperior">/devsuperior</a>
+            <div class="ds-contact-container">
+                <img src="assets/github.svg" alt="Github">
+                <a href="https://github.com/devsuperior">/devsuperior</a>
+            </div>
         </nav>
     </header>
 </body>
