--- a/index.html
+++ b/index.html
@@ -20,6 +20,18 @@
             </div>
         </nav>
     </header>
+    <main>
+        <section id="ds-card-list" class="container">
+            <div class="ds-card">
+                <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/foGkPxpw9h8zln81j63mix5B7m8.jpg"
+                    alt="The Witcher">
+                <div class="ds-card-description">
+                    <h3>The Witcher</h3>
+                    <a class="ds-btn" href="form.html">Avaliar</a>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
