--- a/index.html
+++ b/index.html
@@ -22,12 +22,126 @@
     </header>
     <main>
         <section id="ds-card-list" class="container">
-            <div class="ds-card">
-                <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/foGkPxpw9h8zln81j63mix5B7m8.jpg"
-                    alt="The Witcher">
-                <div class="ds-card-description">
-                    <h3>The Witcher</h3>
-                    <a class="ds-btn" href="form.html">Avaliar</a>
+            <div class="row">
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="ds-card">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/foGkPxpw9h8zln81j63mix5B7m8.jpg"
+                            alt="The Witcher">
+                        <div class="ds-card-description">
+                            <h3>The Witcher</h3>
+                            <a class="ds-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="ds-card">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/w2nFc2Rsm93PDkvjY4LTn17ePO0.jpg"
+                            alt="Tartarugas Ninjas">
+                        <div class="ds-card-description">
+                            <h3>Tartarugas Ninjas</h3>
+                            <a class="ds-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="ds-card">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/7drO1kYgQ0PnnU87sAnBEphYrSM.jpg"
+                            alt="Resident Evil">
+                        <div class="ds-card-description">
+                            <h3>Resident Evil</h3>
+                            <a class="ds-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="ds-card">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/nRYLBc60o2QXkK1gb1roa1WY30.jpg"
+                            alt="Ahsoka">
+                        <div class="ds-card-description">
+                            <h3>Ahsoka</h3>
+                            <a class="ds-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="ds-card">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/9zcbqSxdsRMZWHYtyCd1nXPr2xq.jpg"
+                            alt="The Mandalorian">
+                        <div class="ds-card-description">
+                            <h3>The Mandalorian</h3>
+                            <a class="ds-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="ds-card">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/edXuLjxjYu1SkyMHd55hRasME8b.jpg"
+                            alt="Oração Diabólica">
+                        <div class="ds-card-description">
+                            <h3>Oração Diabólica</h3>
+                            <a class="ds-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="ds-card">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/7RyHsO4yDXtBv1zUU3mTpHeQ0d5.jpg"
+                            alt="Vingadores: Ultimato (2019)">
+                        <div class="ds-card-description">
+                            <h3>Vingadores: Ultimato (2019)</h3>
+                            <a class="ds-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="ds-card">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/4LO6bnNGIa8zNbM6HwCYzlUKIHq.jpg"
+                            alt="Liga da Justiça de Zack Snyder">
+                        <div class="ds-card-description">
+                            <h3>Liga da Justiça de Zack Snyder</h3>
+                            <a class="ds-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="ds-card">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/aw4FOsWr2FY373nKSxbpNi3fz4F.jpg"
+                            alt="Missão impossível - Efeito fallout">
+                        <div class="ds-card-description">
+                            <h3>Missão impossível - Efeito fallout</h3>
+                            <a class="ds-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="ds-card">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/6YwkGolwdOMNpbTOmLjoehlVWs5.jpg"
+                            alt="Vingadores: Era de Ultron (2015)">
+                        <div class="ds-card-description">
+                            <h3>Vingadores: Era de Ultron (2015)</h3>
+                            <a class="ds-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="ds-card">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/eoMushgujydxFplE9yPZ54lwOvo.jpg"
+                            alt="Lego Batman">
+                        <div class="ds-card-description">
+                            <h3>Lego Batman</h3>
+                            <a class="ds-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="ds-card">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/mDfJG3LC3Dqb67AZ52x3Z0jU0uB.jpg"
+                            alt="Vingadores: Guerra Infinita (2018)">
+                        <div class="ds-card-description">
+                            <h3>Vingadores: Guerra Infinita (2018)</h3>
+                            <a class="ds-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
