--- a/form.html
+++ b/form.html
@@ -27,9 +27,28 @@
                     <div class="ds-card">
                         <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/foGkPxpw9h8zln81j63mix5B7m8.jpg"
                             alt="The Witcher">
-                        <div class="ds-card-description">
+                        <div class="ds-form-description">
                             <h3>The Witcher</h3>
-                            <a class="ds-btn" href="index.html">Cancelar</a>
+                            <form class="ds-form">
+                                <div class="form-group ds-form-group">
+                                    <label for="email">Informe seu email</label>
+                                    <input class="form-control" type="email" id="email">
+                                </div>
+                                <div class="form-group ds-form-group">
+                                    <label for="score">Informe seu avaliação</label>
+                                    <select class="form-control" name="score" id="score">
+                                        <option value="1">1</option>
+                                        <option value="2">2</option>
+                                        <option value="3">3</option>
+                                        <option value="4">4</option>
+                                        <option value="5">5</option>
+                                    </select>
+                                </div>
+                                <div class="ds-form-btn-container">
+                                    <button class="ds-btn" type="submit">Salvar</button>
+                                    <a class="ds-btn" href="index.html">Cancelar</a>
+                                </div>
+                            </form>
                         </div>
                     </div>
                 </div>
