--- a/index.html
+++ b/index.html
@@ -39,7 +39,18 @@
                             alt="Tartarugas Ninjas">
                         <div class="ds-card-description">
                             <h3>Tartarugas Ninjas</h3>
-                            <a class="ds-btn" href="form.html">Avaliar</a>
+                            <div class="ds-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="/assets/star-full.svg" alt="Star">
+                                    <img src="/assets/star-full.svg" alt="Star">
+                                    <img src="/assets/star-full.svg" alt="Star">
+                                    <img src="/assets/star-half.svg" alt="Star">
+                                    <img src="/assets/star-empty.svg" alt="Star">
+                                </div>
+                                <p>13 avaliações</p>
+                                <a class="ds-btn" href="form.html">Avaliar</a>
+                            </div>
                         </div>
                     </div>
                 </div>
