Polimento da listagem

--- a/index.html
+++ b/index.html
@@ -29,7 +29,18 @@
                             alt="The Witcher">
                         <div class="ds-card-description">
                             <h3>The Witcher</h3>
-                            <a class="ds-btn" href="form.html">Avaliar</a>
+                            <div class="ds-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="/assets/star-full.svg" alt="Star">
+                                    <img src="/assets/star-full.svg" alt="Star">
+                                    <img src="/assets/star-full.svg" alt="Star">
+                                    <img src="/assets/star-half.svg" alt="Star">
+                                    <img src="/assets/star-empty.svg" alt="Star">
+                                </div>
+                                <p>13 avaliações</p>
+                                <a class="ds-btn" href="form.html">Avaliar</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -60,7 +71,18 @@
                             alt="Resident Evil">
                         <div class="ds-card-description">
                             <h3>Resident Evil</h3>
-                            <a class="ds-btn" href="form.html">Avaliar</a>
+                            <div class="ds-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="/assets/star-full.svg" alt="Star">
+                                    <img src="/assets/star-full.svg" alt="Star">
+                                    <img src="/assets/star-full.svg" alt="Star">
+                                    <img src="/assets/star-half.svg" alt="Star">
+                                    <img src="/assets/star-empty.svg" alt="Star">
+                                </div>
+                                <p>13 avaliações</p>
+                                <a class="ds-btn" href="form.html">Avaliar</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -70,7 +92,18 @@
                             alt="Ahsoka">
                         <div class="ds-card-description">
                             <h3>Ahsoka</h3>
-                            <a class="ds-btn" href="form.html">Avaliar</a>
+                            <div class="ds-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="/assets/star-full.svg" alt="Star">
+                                    <img src="/assets/star-full.svg" alt="Star">
+                                    <img src="/assets/star-full.svg" alt="Star">
+                                    <img src="/assets/star-half.svg" alt="Star">
+                                    <img src="/assets/star-empty.svg" alt="Star">
+                                </div>
+                                <p>13 avaliações</p>
+                                <a class="ds-btn" href="form.html">Avaliar</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -80,7 +113,18 @@
                             alt="The Mandalorian">
                         <div class="ds-card-description">
                             <h3>The Mandalorian</h3>
-                            <a class="ds-btn" href="form.html">Avaliar</a>
+                            <div class="ds-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="/assets/star-full.svg" alt="Star">
+                                    <img src="/assets/star-full.svg" alt="Star">
+                                    <img src="/assets/star-full.svg" alt="Star">
+                                    <img src="/assets/star-half.svg" alt="Star">
+                                    <img src="/assets/star-empty.svg" alt="Star">
+                                </div>
+                                <p>13 avaliações</p>
+                                <a class="ds-btn" href="form.html">Avaliar</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -90,7 +134,18 @@
                             alt="Oração Diabólica">
                         <div class="ds-card-description">
                             <h3>Oração Diabólica</h3>
-                            <a class="ds-btn" href="form.html">Avaliar</a>
+                            <div class="ds-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="/assets/star-full.svg" alt="Star">
+                                    <img src="/assets/star-full.svg" alt="Star">
+                                    <img src="/assets/star-full.svg" alt="Star">
+                                    <img src="/assets/star-half.svg" alt="Star">
+                                    <img src="/assets/star-empty.svg" alt="Star">
+                                </div>
+                                <p>13 avaliações</p>
+                                <a class="ds-btn" href="form.html">Avaliar</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -100,7 +155,18 @@
                             alt="Vingadores: Ultimato (2019)">
                         <div class="ds-card-description">
                             <h3>Vingadores: Ultimato (2019)</h3>
-                            <a class="ds-btn" href="form.html">Avaliar</a>
+                            <div class="ds-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="/assets/star-full.svg" alt="Star">
+                                    <img src="/assets/star-full.svg" alt="Star">
+                                    <img src="/assets/star-full.svg" alt="Star">
+                                    <img src="/assets/star-half.svg" alt="Star">
+                                    <img src="/assets/star-empty.svg" alt="Star">
+                                </div>
+                                <p>13 avaliações</p>
+                                <a class="ds-btn" href="form.html">Avaliar</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -110,7 +176,18 @@
                             alt="Liga da Justiça de Zack Snyder">
                         <div class="ds-card-description">
                             <h3>Liga da Justiça de Zack Snyder</h3>
-                            <a class="ds-btn" href="form.html">Avaliar</a>
+                            <div class="ds-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="/assets/star-full.svg" alt="Star">
+                                    <img src="/assets/star-full.svg" alt="Star">
+                                    <img src="/assets/star-full.svg" alt="Star">
+                                    <img src="/assets/star-half.svg" alt="Star">
+                                    <img src="/assets/star-empty.svg" alt="Star">
+                                </div>
+                                <p>13 avaliações</p>
+                                <a class="ds-btn" href="form.html">Avaliar</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -120,7 +197,18 @@
                             alt="Missão impossível - Efeito fallout">
                         <div class="ds-card-description">
                             <h3>Missão impossível - Efeito fallout</h3>
-                            <a class="ds-btn" href="form.html">Avaliar</a>
+                            <div class="ds-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="/assets/star-full.svg" alt="Star">
+                                    <img src="/assets/star-full.svg" alt="Star">
+                                    <img src="/assets/star-full.svg" alt="Star">
+                                    <img src="/assets/star-half.svg" alt="Star">
+                                    <img src="/assets/star-empty.svg" alt="Star">
+                                </div>
+                                <p>13 avaliações</p>
+                                <a class="ds-btn" href="form.html">Avaliar</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -130,7 +218,18 @@
                             alt="Vingadores: Era de Ultron (2015)">
                         <div class="ds-card-description">
                             <h3>Vingadores: Era de Ultron (2015)</h3>
-                            <a class="ds-btn" href="form.html">Avaliar</a>
+                            <div class="ds-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="/assets/star-full.svg" alt="Star">
+                                    <img src="/assets/star-full.svg" alt="Star">
+                                    <img src="/assets/star-full.svg" alt="Star">
+                                    <img src="/assets/star-half.svg" alt="Star">
+                                    <img src="/assets/star-empty.svg" alt="Star">
+                                </div>
+                                <p>13 avaliações</p>
+                                <a class="ds-btn" href="form.html">Avaliar</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -140,7 +239,18 @@
                             alt="Lego Batman">
                         <div class="ds-card-description">
                             <h3>Lego Batman</h3>
-                            <a class="ds-btn" href="form.html">Avaliar</a>
+                            <div class="ds-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="/assets/star-full.svg" alt="Star">
+                                    <img src="/assets/star-full.svg" alt="Star">
+                                    <img src="/assets/star-full.svg" alt="Star">
+                                    <img src="/assets/star-half.svg" alt="Star">
+                                    <img src="/assets/star-empty.svg" alt="Star">
+                                </div>
+                                <p>13 avaliações</p>
+                                <a class="ds-btn" href="form.html">Avaliar</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -150,7 +260,18 @@
                             alt="Vingadores: Guerra Infinita (2018)">
                         <div class="ds-card-description">
                             <h3>Vingadores: Guerra Infinita (2018)</h3>
-                            <a class="ds-btn" href="form.html">Avaliar</a>
+                            <div class="ds-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="/assets/star-full.svg" alt="Star">
+                                    <img src="/assets/star-full.svg" alt="Star">
+                                    <img src="/assets/star-full.svg" alt="Star">
+                                    <img src="/assets/star-half.svg" alt="Star">
+                                    <img src="/assets/star-empty.svg" alt="Star">
+                                </div>
+                                <p>13 avaliações</p>
+                                <a class="ds-btn" href="form.html">Avaliar</a>
+                            </div>
                         </div>
                     </div>
                 </div>
