Componente de paginação

--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
     </header>
     <main>
         <section id="ds-card-list" class="container">
+            <div class="ds-pagination-container">
+                <div class="ds-pagination-box">
+                    <button disabled><img src="assets/arrow.svg" alt="Voltar"></button>
+                    <p>1 de 23</p>
+                    <button><img class="ds-flip-horizontal" src="assets/arrow.svg" alt="Próxima"></button>
+                </div>
+            </div>
             <div class="row">
                 <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
                     <div class="ds-card">
